--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,21 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.blastfurnace</groupId>
    <artifactId>otr-api-rest-files</artifactId>
-   <version>0.1.0</version>
+   <packaging>jar</packaging>
+   <version>0.2.0</version>
+   <name>otr-api-rest-files</name>
+   <url>http://localhost:8081/artifactory/libs-release-local</url>
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
       <version>2.0.2.RELEASE</version>
    </parent>
+   <distributionManagement>
+      <repository>
+         <id>blastfurnace</id>
+         <url>http://10.0.0.134:8085/artifactory/libs-release-local</url>
+      </repository>
+   </distributionManagement>
    <repositories>
       <repository>
          <id>blastfurnace</id>
@@ -23,36 +32,60 @@
       <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
-         <version>1.16.22</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>com.blastfurnace</groupId>
+         <artifactId>otr-services-files</artifactId>
+         <version>0.2.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.blastfurnace</groupId>
+         <artifactId>otr-services-files</artifactId>
+         <version>0.2.0</version>
+         <classifier>test</classifier>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.blastfurnace</groupId>
          <artifactId>otr-audio-data</artifactId>
-         <version>0.1.0</version>
+         <version>0.3.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.blastfurnace</groupId>
+         <artifactId>otr-audio-data</artifactId>
+         <version>0.3.0</version>
+         <classifier>test</classifier>
+         <type>test-jar</type>
+         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>com.blastfurnace</groupId>
          <artifactId>otr-utils</artifactId>
-         <version>0.1.0</version>
+         <version>0.4.0</version>
       </dependency>
       <dependency>
          <groupId>com.blastfurnace</groupId>
-         <artifactId>entagged</artifactId>
-         <version>1.0.0</version>
+         <artifactId>otr-utils</artifactId>
+         <version>0.4.0</version>
+         <classifier>test</classifier>
+         <type>test-jar</type>
+         <scope>test</scope>
       </dependency>
    </dependencies>
    <properties>
       <java.version>1.8</java.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <const.megabyte>1048576</const.megabyte>
+      <app.version>@project.version@</app.version>
+      <service.ping.response.ok>STATUS OK</service.ping.response.ok>
    </properties>
    <profiles>
       <profile>
          <id>test</id>
          <activation>
-            <activeByDefault>true</activeByDefault>
+            <activeByDefault>false</activeByDefault>
          </activation>
          <properties>
             <activatedProperties>dev</activatedProperties>
@@ -92,11 +125,21 @@
          <build>
             <resources>
                <resource>
-                  <directory>src/main/resources</directory>
+                  <directory>src/test/resources</directory>
                   <filtering>true</filtering>
                </resource>
             </resources>
             <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <dependenciesToScan>
+                        <dependency>com.blastfurnace:otr-audio-data</dependency>
+                        <dependency>com.blastfurnace:otr-services-files</dependency>
+                     </dependenciesToScan>
+                  </configuration>
+               </plugin>
                <plugin>
                   <groupId>org.springframework.boot</groupId>
                   <artifactId>spring-boot-maven-plugin</artifactId>
@@ -105,13 +148,116 @@
          </build>
       </profile>
       <profile>
-         <id>release</id>
+         <id>integrate</id>
          <activation>
             <activeByDefault>false</activeByDefault>
          </activation>
          <properties>
+            <packaging>jar</packaging>
+            <maven.test.skip>false</maven.test.skip>
+            <maven.test.skip.exec>true</maven.test.skip.exec>
+            <deploy.dir>C:/wildfly-12.0.0.Final/standalone/deployments/</deploy.dir>
+            <activatedProperties>integrate</activatedProperties>
+            <log.path>C:/wildfly-12.0.0.Final/standalone/log/</log.path>
+            <log.file>server.log</log.file>
+            <hibernate.ddl>none</hibernate.ddl>
+         </properties>
+         <dependencies>
+            <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-web</artifactId>
+               <exclusions>
+                  <exclusion>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-starter-tomcat</artifactId>
+                  </exclusion>
+               </exclusions>
+            </dependency>
+            <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-data-jpa</artifactId>
+               <exclusions>
+                  <exclusion>
+                     <groupId>org.apache.tomcat</groupId>
+                     <artifactId>tomcat-jdbc</artifactId>
+                  </exclusion>
+               </exclusions>
+            </dependency>
+            <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-test</artifactId>
+               <scope>test</scope>
+            </dependency>
+            <dependency>
+               <groupId>javax.servlet</groupId>
+               <artifactId>javax.servlet-api</artifactId>
+               <version>3.1.0</version>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+               <groupId>mysql</groupId>
+               <artifactId>mysql-connector-java</artifactId>
+               <version>6.0.5</version>
+            </dependency>
+         </dependencies>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-resources-plugin</artifactId>
+                  <version>2.7</version>
+                  <configuration>
+                     <delimiters>
+                        <delimiter>@</delimiter>
+                     </delimiters>
+                     <useDefaultDelimiters>false</useDefaultDelimiters>
+                  </configuration>
+               </plugin>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jar-plugin</artifactId>
+                  <configuration>
+                     <!-- DO NOT include log4j.properties file in your Jar -->
+                     <excludes>
+                        <exclude>**com/blastfurnace/otr/Application.class*</exclude>
+                        <exclude>**/resources/*</exclude>
+                        <exclude>**/lib/*</exclude>
+                        <exclude>**application.properties*</exclude>
+                        <exclude>**pom.properties*</exclude>
+                        <exclude>**pom.xml*</exclude>
+                     </excludes>
+                     <archive>
+                        <manifest>
+                           <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                           <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                     </archive>
+                  </configuration>
+                  <executions>
+                     <execution>
+                        <id>Jar Tests Package</id>
+                        <configuration>
+                           <classifier>test</classifier>
+                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                           <goal>test-jar</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>release</id>
+         <activation>
+            <activeByDefault>true</activeByDefault>
+         </activation>
+         <properties>
             <packaging>war</packaging>
-            <maven.test.skip>true</maven.test.skip>
+            <maven.test.skip>false</maven.test.skip>
+            <maven.test.skip.exec>true</maven.test.skip.exec>
             <deploy.dir>C:/wildfly-12.0.0.Final/standalone/deployments/</deploy.dir>
             <activatedProperties>release</activatedProperties>
             <log.path>C:/wildfly-12.0.0.Final/standalone/log/</log.path>
@@ -171,6 +317,17 @@
                </resource>
             </resources>
             <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-resources-plugin</artifactId>
+                  <version>2.7</version>
+                  <configuration>
+                     <delimiters>
+                        <delimiter>@</delimiter>
+                     </delimiters>
+                     <useDefaultDelimiters>false</useDefaultDelimiters>
+                  </configuration>
+               </plugin>
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-war-plugin</artifactId>
